able to pass Kotlin struct and write into it in Rust

--- a/Kitana/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Kitana/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/ic_date_time"
         android:title="@string/date_time" />
 
+    <item
+        android:id="@+id/location"
+        android:icon="@drawable/ic_location"
+        android:title="@string/location" />
+
 </menu>
