add hour angle to UI

--- a/Kitana/app/src/main/res/layout/activity_moon.xml
+++ b/Kitana/app/src/main/res/layout/activity_moon.xml
@@ -193,6 +193,29 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hour Angle:"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:text="@={viewmodel.hourAngle}"
+                android:textSize="14sp"
+                tools:text="10'10" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
 
             <LinearLayout
